# simonju-chess-gui

./: Cargo.toml
config/: conf.toml
src/: board.rs  game_state.rs  main.rs  networking.rs  state.rs
src/game_state/: event_handler.rs  game_loop.rs
src/networking/: client.rs  server.rs
src/state/: assets.rs  event_handler.rs
src/state/event_handler/: draw.rs  mouse.rs  update.rs
