[package]
name = "chess_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
olindba-chess = { git = "https://github.com/INDA23PlusPlus/olindba-chess", version = "0.1.0" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
serde_json = "1.0.*"
serde = "1.0.*"